# slack-assistant

./: docker-compose.yml  init.sql  pyproject.toml
scripts/: poc_polling.py
slack_assistant/: __init__.py  config.py
slack_assistant/cli/: __init__.py  main.py
slack_assistant/db/: __init__.py  connection.py  models.py  repository.py
slack_assistant/services/: __init__.py  embeddings.py  search.py  status.py
slack_assistant/slack/: __init__.py  client.py  poller.py
